[Bugfix]
[Balance]
[Change]
[Removal]
[Bug]
[WorldGen]
[Partial]
[Version]
[Update]
[Progress]
[Internal]
[Compatibility]
[Integration]
[Temporary]
[API]
[WIP]
[MP]
[SP]
[LAN]

//TODO:
-Material names to reference file
-updateItemStackNBT(NBTTagCompound tag) for weapons
-Shield Belt model
-Translator model
-Translocator model

Changelog:

0.2.0.15
---
[Addition] Translocator fully implemented

0.2.0.14
---
[Addition] Metal armors can be ground into their respective dusts
[Change] Tweaks to Translocator Disc

0.2.0.13
---
[Addition] Black Slimeball and Slime Block
[Addition] Config option for cheaper Health Buckets
[Bugfix] Toxin Suit not being destroyed fixed
[Change] Buffed Titanium armor durability
[Addition] Gave some wooden items from vanilla burn times in furnace

0.2.0.12
---
[Change] More sound tweaks
[Addition] Invisibility Item and Recipe

0.2.0.11
---
[Addition] Armor Textures
[Addition] Super Health Item and Recipe

0.2.0.10
---
[Change] Misc recipe tweaks
[Addition] Weapon sounds! (for some at least)
[Change] Tweaks to weapon data
[Bug] Weapons bounce around in your hand in first person when you fire them 

0.2.0.9
---
[Change] Fixed ItemBlocks, no separate items for the ItemBlocks now
[Addition] Ink Sac storage block, Decorative Smooth Iron Block
[Addition] Tarydium Sludge Debug Recipe

0.2.0.8
---
[Change] Translocator tweaks
[Addition] Jump Boots provide step assist

0.2.0.7
---
[Addition][Change] Many more ItemBlocks, tooltips, and some more potion effects for some items
[Removal][Change] Fluids and fluid blocks removed. Buckets no longer function, but will still exist

0.2.0.6
---
[Addition] Lithium ingot, nugget, block, dust, and tiny dust
[Balance][Change] Brilithium Power Core now uses Lithium instead of Titanium
[Bugfix][Change] Asbestos Blocks now poison the holder
[Bugfix] Force Field breaking on 2nd use fixed

0.2.0.5
---
[Addition] All the Tiny Dusts

0.2.0.4
---
[Update][Progress] Blocks with non-cube models functioning properly