@@ -32,7 +32,7 @@ public class ItemForceField extends ItemItemBlockPlacerDamageable
 	
 	public boolean onItemUse(ItemStack stack, EntityPlayer playerIn, World worldIn, BlockPos pos, EnumFacing side, float hitX, float hitY, float hitZ)
     {
-		if(playerIn.isSneaking() && worldIn.getBlockState(pos).getBlock() == UnrealBlocks.blockForceField && (stack.getItemDamage() > this.getDamagePerPlace() || playerIn.capabilities.isCreativeMode))
+		if(playerIn.isSneaking() && worldIn.getBlockState(pos).getBlock() == UnrealBlocks.blockForceField && (stack.getItemDamage() > this.getDamageOnCraft() || playerIn.capabilities.isCreativeMode))
 		{
 			worldIn.playSoundEffect((double)((float)pos.getX() + 0.5F), (double)((float)pos.getY() + 0.5F), (double)((float)pos.getZ() + 0.5F), this.block.stepSound.getPlaceSound(), (this.block.stepSound.getVolume() + 1.0F) / 2.0F, this.block.stepSound.getFrequency() * 0.8F);
             worldIn.setBlockToAir(pos);
