@@ -35,7 +35,7 @@ public class Materials
 				.addArmorMaterial(Reference.Armor.Material.Name.SHIELD, Reference.Armor.Texture.SHIELD, 20, new int[] {64, 256, 128, 32}, 0);
 		
 		public static ItemArmor.ArmorMaterial SLIME = EnumHelper
-				.addArmorMaterial(Reference.Armor.Material.Name.SLIME, Reference.Armor.Texture.SLIME, 6, new int[] {1, 1, 1, 1}, 12);
+				.addArmorMaterial(Reference.Armor.Material.Name.SLIME, Reference.Armor.Texture.SLIME, 6, new int[] {1, 4, 3, 2}, 12);
 		
 		public static ItemArmor.ArmorMaterial TITANIUM = EnumHelper
 				.addArmorMaterial(Reference.Armor.Material.Name.TITANIUM, Reference.Armor.Texture.TITANIUM, 22, new int[] {4, 6, 5, 3}, 9);
